Properly spawns players according to selection
I thought the structure for bridging selection to spawn from the code existed, but then realized it didn't exist. The selection now carries over appropriately to the spawn.

--- a/2D Multiplayer Fighting Game/2D Platform Multiplayer Fighter/Assembly-CSharp.csproj
+++ b/2D Multiplayer Fighting Game/2D Platform Multiplayer Fighter/Assembly-CSharp.csproj
@@ -81,8 +81,6 @@
     <Compile Include="Assets\AssetsFromStore\CodeMonkey\Utils\World_Sprite.cs" />
     <Compile Include="Assets\HowToHealthBar\Scripts\GameHandler.cs" />
     <Compile Include="Assets\HowToHealthBar\Scripts\HealthBar.cs" />
-    <Compile Include="Assets\Scripts\CharacterSelection.cs" />
-    <Compile Include="Assets\Scripts\characterTeleport.cs" />
     <Compile Include="Assets\Scripts\CollisionManager.cs" />
     <Compile Include="Assets\Scripts\EnemySpawner.cs" />
     <Compile Include="Assets\Scripts\Gun.cs" />
@@ -94,6 +92,7 @@
     <Compile Include="Assets\Scripts\projectileCollider.cs" />
     <Compile Include="Assets\Scripts\Respawner.cs" />
     <Compile Include="Assets\Scripts\Score.cs" />
+    <Compile Include="Assets\Scripts\SpawnPlayer.cs" />
     <Compile Include="Assets\Scripts\WeaponDamageAmounts.cs" />
     <None Include="Assets\AssetsFromStore\Ninja Files\Read Me.txt" />
     <None Include="Assets\AssetsFromStore\CodeMonkey\README.txt" />
