Added blinking to the start text.

--- a/2D Multiplayer Fighting Game/2D Platform Multiplayer Fighter/Assembly-CSharp.csproj
+++ b/2D Multiplayer Fighting Game/2D Platform Multiplayer Fighter/Assembly-CSharp.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Assets\AssetsFromStore\CodeMonkey\Utils\World_Bar.cs" />
     <Compile Include="Assets\AssetsFromStore\CodeMonkey\Utils\World_Mesh.cs" />
     <Compile Include="Assets\AssetsFromStore\CodeMonkey\Utils\World_Sprite.cs" />
+    <Compile Include="Assets\Scripts\Blink.cs" />
     <Compile Include="Assets\Scripts\CollisionManager.cs" />
     <Compile Include="Assets\Scripts\EnemySpawner.cs" />
     <Compile Include="Assets\Scripts\Gun.cs" />
