Missing something with the character spawns. Created player prefabs with the markers. May revert to old spawn system.

--- a/2D Multiplayer Fighting Game/2D Platform Multiplayer Fighter/Assembly-CSharp.csproj
+++ b/2D Multiplayer Fighting Game/2D Platform Multiplayer Fighter/Assembly-CSharp.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Assets\Scripts\Navigation\P4_Nav.cs" />
     <Compile Include="Assets\Scripts\OptionsMenu.cs" />
     <Compile Include="Assets\Scripts\Pauser.cs" />
+    <Compile Include="Assets\Scripts\PlayerCharacter.cs" />
     <Compile Include="Assets\Scripts\PlayerControl.cs" />
     <Compile Include="Assets\Scripts\PlayerHealthAndDamage.cs" />
     <Compile Include="Assets\Scripts\ProjectileCollision.cs" />
@@ -142,7 +143,7 @@
     <Compile Include="Assets\Scripts\SceneLoader.cs" />
     <Compile Include="Assets\Scripts\Score.cs" />
     <Compile Include="Assets\Scripts\shootingProjectile.cs" />
-    <Compile Include="Assets\Scripts\SpawnPlayer.cs" />
+    <Compile Include="Assets\Scripts\SpawnPlayers.cs" />
     <Compile Include="Assets\Scripts\spriteFader.cs" />
     <None Include="Assets\AssetsFromStore\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\AssetsFromStore\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
