PlayerID and Respawn

--- a/2D Multiplayer Fighting Game/2D Platform Multiplayer Fighter/Assembly-CSharp.csproj
+++ b/2D Multiplayer Fighting Game/2D Platform Multiplayer Fighter/Assembly-CSharp.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Assets\Scripts\ProjectileCollision.cs" />
     <Compile Include="Assets\Scripts\QuitGame.cs" />
     <Compile Include="Assets\Scripts\ResizePanel.cs" />
+    <Compile Include="Assets\Scripts\Respawner.cs" />
     <Compile Include="Assets\Scripts\SceneLoader.cs" />
     <Compile Include="Assets\Scripts\Score.cs" />
     <Compile Include="Assets\Scripts\ScrollDetailTexture.cs" />
