--- a/2D Multiplayer Fighting Game/2D Platform Multiplayer Fighter/Assembly-CSharp.csproj
+++ b/2D Multiplayer Fighting Game/2D Platform Multiplayer Fighter/Assembly-CSharp.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Assets\Scripts\enemyAI.cs" />
     <Compile Include="Assets\Scripts\EnemySpawner.cs" />
     <Compile Include="Assets\Scripts\healerAI.cs" />
+    <Compile Include="Assets\Scripts\MainMenu.cs" />
     <Compile Include="Assets\Scripts\MapSelection.cs" />
     <Compile Include="Assets\Scripts\meleeAttacks.cs" />
     <Compile Include="Assets\Scripts\musicContinuation.cs" />
