Added player tags to players
Should help them see who and where they are quicker, with less instruction.

--- a/2D Multiplayer Fighting Game/2D Platform Multiplayer Fighter/Assembly-CSharp.csproj
+++ b/2D Multiplayer Fighting Game/2D Platform Multiplayer Fighter/Assembly-CSharp.csproj
@@ -185,6 +185,7 @@
     <Compile Include="Assets\Rewired\Internal\Scripts\Misc\ExternalTools.cs" />
     <Compile Include="Assets\Rewired\Internal\Scripts\Platforms\Ouya\OuyaInputSource.cs" />
     <Compile Include="Assets\Scenes\RewiredStandaloneInputModule.cs" />
+    <Compile Include="Assets\Scripts\ActivatePlayerTag.cs" />
     <Compile Include="Assets\Scripts\ActiveStateToggler.cs" />
     <Compile Include="Assets\Scripts\ApplicationManager.cs" />
     <Compile Include="Assets\Scripts\arrowProjectileHandler.cs" />
